feat: added debugmode
