# internal/models/request/check_request.go
@@ -22,6 +22,9 @@ type CheckRequest struct {
 	// InstallerPackageName is the package name of the installer.
 	// @Required
 	InstallerPackageName string `json:"installerPackageName" validate:"required" example:"apk"`
+    // New field for debug mode
+    // @Description If true, the API will always return the latest version information regardless of the actual version status. Useful for debugging purposes.
+    DebugMode bool `json:"debugMode,omitempty"`
 }
 
 // Validate использует валидатор для проверки полей структуры AppUpdateRequest.
