# internal/models/response/check_response.go
@@ -2,14 +2,13 @@ package response
 
 // VersionInfo holds information about the latest version of the app.
 type VersionInfo struct {
-	// VersionCode represents the version build of the application.
-	VersionCode int `json:"versionCode,omitempty"`
+	// existing fields...
+	// @Description The URL where the latest version can be downloaded from.
+	// In debug mode, this URL is always provided, even when no update is required.
+	Url string `json:"url,omitempty"`
 
 	// VersionName is the version of the latest application version.
 	VersionName string `json:"versionName,omitempty"`
-
-	// Url is the URL where the latest version can be downloaded from.
-	Url string `json:"url,omitempty"`
 
 	// Checksum is the SHA-256 checksum of the latest application version.
 	Checksum string `json:"checksum,omitempty"` // Add Swagger description here
